--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,43 @@
   font-size: 1.5em;
 }
 
-/* Enleve le padding crée par le navigateur */
+.police3 {
+  font-family: 'Cinzel', serif;
+  font-size: 1em;
+}
+
+.police4 {
+  font-family: 'Cinzel', serif;
+  font-size: 1.5em;
+  color: azure;
+}
+
+.police5 {
+  font-family: 'Cinzel', serif;
+  font-size: 1.8em;
+  font-weight: normal;
+}
+
+/* ul et H5 Enleve les valeurs crée par le navigateur */
 ul {
   padding-inline-start: 0px;
+}
+
+h5 {
+  display: block;
+  font-size: 1.2em;
+  margin-block-start: 1.67em;
+  margin-block-end: 1.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: lighter;
+  unicode-bidi: isolate;
+}
+/*****************************************************/
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 /* Navigation avec image de fond */
@@ -22,7 +56,7 @@ nav {
   padding-bottom: 2%;
 }
   
-  .container-nav {
+.container-nav {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,33 +64,22 @@ nav {
   background-color: transperent;
   width: 100%;
   height: 100px;
-  }
+}
   
-  .poiter {
+.poiter {
   cursor:pointer;
   list-style-type: none;
-  }
+}
   
-  .poiter:hover > ul {
+.poiter:hover > ul {
   display: grid;
-  }
+}
   
-  .sous-liste {
-  list-style-type: none;
-  text-align: center;
-  padding: 0;
-  display: none; /* cache les sous-menu */
-  }
-  
-  .items-sous-liste:hover {
-    color:rgb(199, 19, 19);
-  }
-  
-  .itemlogo {
+.itemlogo {
   width: 120px;
-  }
+}
   
-  .container-image-backgroung-nav {
+.container-image-backgroung-nav {
   background-image: url("../img/divers/m.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -118,8 +141,8 @@ nav {
   transform: scale(1.1); /* scale agrandi l'image */
 }
 
-.section-blog {
-  background-image: url("../img/divers/cofee.png");
+.section-animaux {
+  background-image: url("../img/animaux/kangourou.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -148,6 +171,8 @@ nav {
   grid-row: 1 / 3;
 }
 
+
+
 .section-aventure {
   background-image: url("../img/aventure/john.jpg");
   background-repeat: no-repeat;
@@ -158,8 +183,8 @@ nav {
   grid-row: 3;
 }
 
-.section-photographe {
-  background-image: url("../img/info/blue.jpg");
+.section-sport {
+  background-image: url("../img/sport/sports.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -170,6 +195,7 @@ nav {
   
 .survol-prestation .survol {
   display: none;
+  color: #fff;
 }
 
 .survol-prestation:hover .defaut {
@@ -189,11 +215,9 @@ hr {
 /* Container video */
 .video-container {
   display: flex;
-  width: 70%;
+  justify-content: center;
   margin-top: 5%;
-  margin-right: auto;
   margin-bottom: 10%;
-  margin-left: auto;
 }
 
 .iframe-page-index {
@@ -228,8 +252,7 @@ hr {
   }
 
   img {
-    margin-left: 2%;
-    margin-right: 2%;
+margin: 2%;
   }
 
 
@@ -313,8 +336,8 @@ hr {
 .container-presentation-prestation-portrait {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
 .section-portrait-tarif {
@@ -390,6 +413,94 @@ hr {
   margin: 3%;
 }
 
+/* =============== Page Aventure =============== */
+.img-presentation-aventure {
+  height: 43em;
+}
+
+.titre-aventure {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.description-aventure {
+  width: 40em;
+}
+
+.container-aventure {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(241, 220, 209);
+  padding: 20px;
+  max-width: 90%;
+  margin: 3%;
+}
+
+.column {
+  flex: 1;
+  text-align: center;
+  padding: 10px;
+}
+
+.column , .paraf {
+  text-align: left;
+}
+
+/* Style des images */
+.image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-container-aventure, .aventure-image {
+  width: 100%;
+  height: 54%;
+  margin-bottom: 10px;  
+}
+
+.evenement-aventure {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.event {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border-left: 5px solid #ccc;
+}
+
+.date {
+  background: #e3e3e3;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.info {
+  flex: 1;
+  margin-left: 15px;
+}
+
+.button {
+  background: rgb(241, 220, 209);
+  color: #514e4e;
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.separator {
+  height: 1px;
+  background: #ccc;
+  margin: 10px 0;
+}
+
+
 /* =============== Bouton en savoir plus =============== */
 .savoirplus {
   cursor:pointer;
@@ -400,7 +511,7 @@ hr {
   font-size: 15px;
   letter-spacing: 3px;
   width: 50vh;
-  height: 10vh;
+  height: 9vh;
 }
 
 .savoirplus:hover {
@@ -500,34 +611,92 @@ hr {
 .blog2{grid-area:blog2;}
 .blog3{grid-area:blog3;}
 .blog4{grid-area:blog4;}
-  /* =============== Pied de page =============== */
-  footer {
-    display: grid;
-    align-items: center;
-    text-align: center;
-    grid-template-columns: auto 600px auto;
-    color: rgb(203, 196, 196);
-    background: rgb(227, 227, 227);
-    height: 150px;
-  }
+
+/* ==================== Contact ==================== */
+.background-form-contact {
+  background-image: url("../img/contact/foutain.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 45em;
+
+  /* Masque avec un dégradé */
+  -webkit-mask-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 1) 70%, transparent);
+  mask-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 1) 5%, rgba(0, 0, 0, 1) 90%, transparent);
+ 
+}
+
+.form-display {
+  width: 25em;
+  display: grid;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5%;
+}
+
+.champ1 {                              
+  background-color: rgba(255, 255, 255, 0.716);
+  border: none;
+  height: 3em;
+  margin-bottom: 0.5em;
+}
+
+.champ2 {
+  resize: none;
+  background-color: rgba(255, 255, 255, 0.716);
+  border: none;
+  text-align: center;
+}
+
+.send {
+  cursor:pointer;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0.763);
+}
+
+.send:hover {
+  color: white;
+  background: rgb(143, 129, 117);
+  transition-duration: 0.3s;
+}
+
+input::placeholder {
+  text-align: center;
+}
+
+/* =============== Pied de page =============== */
+footer {
+  display: grid;
+  align-items: center;
+  text-align: center;
+  grid-template-columns: auto 600px auto;
+  color: rgb(203, 196, 196);
+  background: rgb(227, 227, 227);
+  height: 150px;
+}
   
   
-  .foot1 {
-    color: black;
-    font-size: 15px;
-  }
+.foot1 {
+  color: black;
+  font-size: 15px;
+}
   
-  .foot2 {
-    font-size: 15px;
-    border: none;
-    background: none;
-    color: rgb(21, 21, 21);
-  }
+.foot2 {
+  font-size: 15px;
+  border: none;
+  background: none;
+  color: rgb(21, 21, 21);
+}
   
-  .foot3 {
-    background: white;
-    padding-top: 10%;
-    padding-left: 30%;
-    padding-right: 30%;
-    padding-bottom: 5%;
-  }
+.foot3 {
+  background: white;
+  padding-top: 10%;
+  padding-left: 30%;
+  padding-right: 30%;
+  padding-bottom: 5%;
+}
