--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,11 +1,398 @@
-@media screen and (max-width: 1200px) {
+/* "Cela signifie que les styles à l'intérieur
+ s'appliqueront uniquement lorsque la largeur
+de l'écran sera inférieure ou égale à 1600 pixels." */
 
-}
-
-@media screen and (max-width: 650px) {
-
-}
-
-@media screen and (max-width: 475px) {
+/* Grand écran */
+@media screen and (max-width: 1600px) {
+  .police1 {
+    font-family: 'Cinzel', serif;
+    font-size: 1em;
+    font-weight: normal;
+  }
     
+  .police2 {
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 1.8em;
+  }
+    
+  .police3 {
+    font-family: 'Cinzel', serif;
+    font-size: 1.3em;
+  }
+    
+  .police4 {
+    font-family: 'Cinzel', serif;
+    font-size: 1.5em;
+    color: azure;
+  }
+
+  .slideshow-container {
+    position: relative;
+    width: 65%;
+  }
+
+  .bouton-galerie {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 4% 1%;
+  }
+}
+
+/* Desktop */
+@media screen and (max-width: 1200px) {
+  .police2 {
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 1.7em;
+  }
+
+  .paraf-paysage-texte-responsive {
+    width: 80%;
+    display: inline-block;
+  }
+
+  .position-bouton {
+    padding-top: 5%;
+    padding-bottom: 7%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .form-display {
+    width: 25em;
+    display: grid;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 5%;
+    padding-bottom: 8%;
+  }
+
+  .section-portrait-tarif {
+    padding: 20px;
+    margin: 15px;
+    height: 60vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+  }
+
+  .slideshow-container {
+    position: relative;
+    width: 80%;
+  }
+}
+
+/* Tablette 768px en général mais rendu moyen avec la navbar */
+@media screen and (max-width: 1000px) {
+  .police1 {
+    font-family: 'Cinzel', serif;
+    font-size: 1.3em;
+    font-weight: normal;
+  }
+
+  .police2 {
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 1.7em;
+  }
+
+  .police4 {
+    font-family: 'Cinzel', serif;
+    font-size: 1em;
+    color: rgb(0, 0, 0);
+  }
+
+  .paraf-paysage-texte-responsive {
+    width: 80%;
+    display: inline-block;
+  }
+
+  .container-carrousel {
+    display: flex;
+    justify-content: center;
+    height: 50vh;
+  }
+
+  .section-portrait-tarif {
+    padding: 20px;
+    margin: 20px 5px;
+    height: 40vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+      transition: 0.5s;
+  }
+
+  .description-aventure {
+    width: auto;
+  }
+
+  .container-aventure {
+    display: block;
+    justify-content: space-between;
+    background-color: rgb(241, 220, 209);
+    padding: 20px;
+    max-width: 90%;
+    margin: 3%;
+  }
+
+  .evenement-aventure {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+    
+  .img-presentation-aventure {
+    height: auto;
+    width: 95%;
+    margin: 0%;
+  }
+
+  .container-presentation-prestation-portrait {
+    display: block;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .video-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+
+  .bouton-galerie {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 9% 1%;
+  }
+
+  .disposition-grand-text {
+    display: block;
+    justify-content: center;
+    text-align: start;
+    margin: 0% 8%;
+    }
+
+  .survol-prestation-portrait .survol-2 {
+    display: block; 
+  }
+}
+
+/* Mobile */
+@media screen and (max-width: 730px) {
+  .container-presentation-prestation {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 10em 10em 10em 10em 10em 10em;
+  }
+
+  .section-portrait {
+    background-image: url(../img/portrait/image1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    grid-column: 1 / 3;
+    grid-row: 4 / 6;
+  }
+
+  .aventure-image {
+    width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-bottom: 2%;
+    margin-right: auto;
+  }
+
+  .image-container-aventure {
+    display: block;
+    justify-content: center;
+    width: auto;
+    height: auto;
+  }
+
+  .section-aventure {
+    background-image: url(../img/aventure/john.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    grid-column: 1;
+    grid-row: 6 / 7;
+  }
+
+  .section-sport {
+    background-image: url(../img/sport/image1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    grid-column: 2;
+    grid-row: 6 / 7;
+  }
+
+  .video-container {
+    display: block;
+    justify-content: center;
+    margin-top: 10%;
+    margin-bottom: 20%;
+  }
+
+  .citation-einstein {
+    text-align: justify;
+    text-align-last: right;
+    width: 90%;
+    margin-top: 5%;
+    margin-right: auto;
+    margin-bottom: 5%;
+    margin-left: auto;
+  }
+
+  .iframe-page-index {
+    width: 100%;
+    height: auto;
+  }
+
+  .savoirplus {
+    cursor: pointer;
+    color: rgb(143, 143, 143);
+    background: white;
+    border: 1px solid rgb(186, 186, 186);
+    border-style: thin;
+    letter-spacing: 1px;
+    width: 40vh;
+    height: 9vh;
+  }
+
+  .police3 {
+    font-family: 'Cinzel', serif;
+    font-size: 1em;
+  }
+
+  .foot3 {
+    background: white;
+    padding-top: 10%;
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-bottom: 5%;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .police1 {
+    font-family: 'Cinzel', serif;
+    font-size: 1em;
+    font-weight: normal;
+  }
+
+  .img-footer {
+    width: 80px;
+    display: initial;
+  }
+
+  .foot3 {
+    display: flex;
+    background: white;
+    padding-top: 10%;
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-bottom: 5%;
+    font-size: 12px;
+  }
+
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    width: 100%;
+    margin: 2% 2%;
+  }
+
+  .section-portrait-tarif {
+    padding: 20px;
+    margin: 20px 5px;
+    height: 60vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+  }
+
+  .logo {
+    width: 120px;
+    height: auto;
+  }
+
+  .form-display {
+    width: auto;
+    display: grid;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 15%;
+    padding-bottom: 20%;
+  }
+
+  .champ1 {
+    background-color: rgba(255, 255, 255, 0.716);
+    border: none;
+    height: 3em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    margin-bottom: 0.5em;
+  }
+
+  .champ2 {
+    resize: none;
+    background-color: rgba(255, 255, 255, 0.716);
+    border: none;
+    text-align: center;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .send {
+    cursor: pointer;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.763);
+  }
+
+  .slideshow-container {
+    position: relative;
+    width: 100%;
+  }
+
+  .menu-icon {
+    font-size: 45px;
+    cursor: pointer;
+  }
+
+  .close-icon {
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    font-size: 70px;
+    cursor: pointer;
+    color: white;
+  }
 }
