--- a/css/style.css
+++ b/css/style.css
@@ -772,7 +772,28 @@ transform: translate(5px, 5px);
 input::placeholder {
   text-align: center;
 }
+/* =============== Réseaux sociaux ============== */
+.social-bar {
+  display: flex;
+  justify-content: center; /* Centre les éléments horizontalement */
+  align-items: center;     /* Centre les éléments verticalement */
+  padding: 20px;
+  border-radius: 30px; /* Bords arrondis */
+  margin: 40px 0; /* Espacement vertical */
+}
 
+/* Style des icônes de réseaux sociaux */
+.social-icon {
+  width: 40px; /* Taille de l'icône */
+  height: 40px; /* Taille de l'icône */
+  margin: 0 15px; /* Espace entre les icônes */
+  transition: transform 0.3s ease-in-out; /* Effet de transition lors du survol */
+}
+
+/* Effet au survol des icônes */
+.social-icon:hover {
+  transform: scale(1.2);
+}
 /* =============== Pied de page =============== */
 footer {
   display: grid;
